Se modificó la posición del footer del carrito de compras para corregir el problema que había de que los últimos platos se veían incompletos.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="platos2"></div>
         </main>
 
-        <footer>
+        <footer class="footerCarrito">
             <div class="total">
                 <div class="text">
                     <p>Subtotal</p>
